2021-07-04  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Decode-Compute-Encode): Fix `double_number`
	function: s/int/unsigned char/ for bytes.

2021-06-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* common/pk-utils.h (pk_format_binary): New function declaration.
	* common/pk-utils.c (pk_format_binary): New function definition.
	* libpoke/pkl-lex.l (format): Recognize `format`.
	* libpoke/pkl-ast.h (PKL_AST_FORMAT): Define.
	(PKL_AST_FORMAT_ARG): Likewise.
	(PKL_AST_TYPE_A_FORMATER): Likewise.
	(PKL_AST_TYPE_S_FORMATER): Likewise.
	(PKL_AST_FORMAT_FMT): Likewise.
	(PKL_AST_FORMAT_TYPES): Likewise.
	(PKL_AST_FORMAT_ARGS): Likewise.
	(PKL_AST_FORMAT_NARGS): Likewise.
	(PKL_AST_FORMAT_PREFIX): Likewise.
	(PKL_AST_FORMAT_FMT_PROCESSED_P): Likewise.
	(struct pkl_ast_format): New struct.
	(pkl_ast_make_format): New function declaration.
	(PKL_AST_FORMAT_ARG_EXP): Define.
	(PKL_AST_FORMAT_ARG_BASE): Likewise.
	(PKL_AST_FORMAT_ARG_SUFFIX): Likewise.
	(PKL_AST_FORMAT_ARG_BEGIN_SC): Likewise.
	(PKL_AST_FORMAT_ARG_END_SC): Likewise.
	(PKL_AST_FORMAT_ARG_VALUE_P): Likewise.
	(PKL_AST_FORMAT_ARG_FORMAT_MODE): Likewise.
	(PKL_AST_FORMAT_ARG_FORMAT_DEPTH): Likewise.
	(PKL_AST_FORMAT_MODE_FLAT): Likewise.
	(PKL_AST_FORMAT_MODE_TREE): Likewise.
	(struct pkl_ast_format_arg): New struct.
	(pkl_ast_make_format_arg): New function declaration.
	(struct pkl_ast_print_stmt): Delegate all format processing to a
	PKL_AST_FORMAT node.
	(pkl_ast_make_print_stmt): Change API.
	(PKL_AST_PRINT_STMT_FMT): Remove.
	(PKL_AST_PRINT_STMT_TYPES): Likewise.
	(PKL_AST_PRINT_STMT_ARGS): Likewise.
	(PKL_AST_PRINT_STMT_NARGS): Likewise.
	(PKL_AST_PRINT_STMT_PREFIX): Likewise.
	(PKL_AST_PRINT_STMT_FMT_PROCESSED_P): Likewise.
	(PKL_AST_PRINT_STMT_ARG): Likewise.
	(struct pkl_ast_print_stmt_arg): Likewise.
	(PKL_AST_PRINT_STMT_ARG_EXP): Likewise.
	(PKL_AST_PRINT_STMT_ARG_BASE): Likewise.
	(PKL_AST_PRINT_STMT_ARG_SUFFIX): Likewise.